snake spawn improvement - performance improvement